# vector-experiments

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  app.cpp  run.ps1  vector-experiments.vcxproj
.github/workflows/: ci.yml
src/: crc32c.hpp  distance.hpp  main.cpp  platform.hpp  sorting.hpp
